completed all the requirements

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "read-data": "^1.1.0",
     "rewire": "^2.5.2",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "write-yaml": "^1.0.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
